// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TipeSelect.vue renders 1`] = `
<div data-tipe-ui="TipeSelect" class="select-flex">
  <label for="Role">Role</label>
  <div id="Role" tabindex="0" class="select medium">
    <select>
      <!---->
      <option value="owner">Owner</option>
      <option value="admin">Admin</option>
    </select>
    <div class="fake-select medium">Owner</div>
    <!---->
  </div>
</div>
`;

exports[`TipeSelect.vue renders without options 1`] = `
<div data-tipe-ui="TipeSelect" class="select-flex">
  <label for="Role">Role</label>
  <div id="Role" tabindex="0" class="select medium">
    <select>
      <!---->
    </select>
    <div class="fake-select error medium">Please provide select options</div>
    <!---->
  </div>
</div>
`;
